# ogs5

./: CMakeLists.txt  SetupLibs.bat  desktop.ini
Base/: BuildInfo.h  CMakeLists.txt  CorrectScientificNotationMain.cpp  DateTools.cpp  DateTools.h  FileFinder.h  FileTools.cpp  FileTools.h  Histogram.h  MemWatch.cpp  MemWatch.h  SplitMPI_Communicator.cpp  SplitMPI_Communicator.h  StringTools.cpp  StringTools.h  TimeInterval.cpp  TimeInterval.h  binarySearch.cpp  binarySearch.h  break.cpp  break.h  display.cpp  display.h  isnan.h  makros.cpp  makros.h  memory.cpp  memory.h  printList.h  quicksort.h  timer.cpp  timer.h  uniqueListInsert.h  wait.h
CMakeConfiguration/: Find.cmake
FEM/: BoundaryCondition.cpp  BoundaryCondition.h  CAP_IO.cpp  CAP_IO.h  CMakeLists.txt  Constrained.h  DUMUX.cpp  DUMUX.h  DistributionInfo.cpp  DistributionInfo.h  Eclipse.cpp  Eclipse.h  FEMCondition.cpp  FEMCondition.h  FEMEnums.cpp  FEMEnums.h  GeoInfo.cpp  GeoInfo.h  InitialCondition.cpp  InitialCondition.h  LinearFunctionData.cpp  LinearFunctionData.h  Output.cpp  Output.h  PhysicalConstant.h  ProcessInfo.cpp  ProcessInfo.h  ShapeFunctionPool.cpp  ShapeFunctionPool.h  SourceTerm.cpp  SourceTerm.h  SparseMatrixDOK.cpp  SparseMatrixDOK.h  StepperBulischStoer.h  Stiff_Bulirsch-Stoer.cpp  Stiff_Bulirsch-Stoer.h  SwitchBC.h  break.cpp  break.h  conversion_rate.cpp  (+89 more)
FEM/Deformation/: Excavation.cpp  Excavation.h
FileIO/: CMakeLists.txt  FEFLOWInterface.cpp  FEFLOWInterface.h  GMSInterface.cpp  GMSInterface.h  GocadInterface.cpp  GocadInterface.h  NetCDFInterface.cpp  NetCDFInterface.h  OGSIOVer4.cpp  OGSIOVer4.h  PetrelInterface.cpp  PetrelInterface.h  Reader.cpp  Reader.h  SHPInterface.cpp  SHPInterface.h  StationIO.cpp  StationIO.h  Writer.cpp  Writer.h  readNonBlankLineFromInputStream.cpp  readNonBlankLineFromInputStream.h
FileIO/FEMIO/: BoundaryConditionIO.cpp  BoundaryConditionIO.h  GeoIO.cpp  GeoIO.h  ProcessIO.cpp  ProcessIO.h
FileIO/MathIO/: *.cpp  CRSIO.h
FileIO/MeshIO/: GMSHAdaptiveMeshDensity.cpp  GMSHAdaptiveMeshDensity.h  GMSHFixedMeshDensity.cpp  GMSHFixedMeshDensity.h  GMSHInterface.cpp  GMSHInterface.h  GMSHLine.cpp  GMSHLine.h  GMSHLineLoop.cpp  GMSHLineLoop.h  GMSHMeshDensityStrategy.h  GMSHNoMeshDensity.h  GMSHPoint.cpp  GMSHPoint.h  GMSHPolygonTree.cpp  GMSHPolygonTree.h  LegacyVtkInterface.cpp  LegacyVtkInterface.h  OGSMeshIO.cpp  OGSMeshIO.h  TetGenInterface.cpp  TetGenInterface.h
FileIO/XmlIO/: XMLInterface.cpp  (+7 more)
GCC/: CMakeLists.txt  Fluid.cpp  Fluid.h
GEO/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  BruteForceClosestPair.cpp  BruteForceClosestPair.h  CMakeLists.txt  ClosestPair.h  Color.cpp  Color.h  GEOObjects.cpp  GEOObjects.h  GeoObject.h  GeoType.cpp  GeoType.h  Grid.h  OctTree.h  Point.cpp  Point.h  PointVec.cpp  PointVec.h  PointWithID.h  Polygon.cpp  Polygon.h  Polyline.cpp  Polyline.h  PolylineVec.h  PolylineWithSegmentMarker.cpp  PolylineWithSegmentMarker.h  ProjectData.cpp  ProjectData.h  PropertyBounds.h  QuadTree.h  Raster.cpp  Raster.h  SensorData.cpp  SensorData.h  SimplePolygonTree.cpp  SimplePolygonTree.h  Station.cpp  Station.h  Surface.cpp  (+24 more)
MSH/: CMakeLists.txt  GridAdapter.cpp  GridAdapter.h  MSHEnums.cpp  MSHEnums.h  MeshNodesAlongPolyline.cpp  MeshNodesAlongPolyline.h  MshEditor.cpp  MshEditor.h  msh_core.cpp  msh_core.h  msh_edge.cpp  msh_edge.h  msh_elem.cpp  msh_elem.h  msh_faces.cpp  msh_faces.h  msh_lib.cpp  msh_lib.h  msh_lib_ext.cpp  msh_mesh.cpp  msh_mesh.h  msh_node.cpp  msh_node.h  msh_pnt.cpp
MSHGEOTOOLS/: ExtractMeshNodes.cpp  ExtractMeshNodes.h
MathLib/: AnalyticalGeometry.cpp  AnalyticalGeometry.h  EarClippingTriangulation.cpp  EarClippingTriangulation.h  LinkedTriangle.cpp  LinkedTriangle.h  MathTools.cpp  MathTools.h  Matrix.h  Vector3.h  max.h
OGS/: ogs_display.cpp  rf.cpp
OGSProject/: gs_project.cpp  gs_project.h
UTL/: benchtimer.cpp  benchtimer.h  tokenbuf.cpp  tokenbuf.h
UTL/HeterogeneousMaterialGenerator/: CMakeLists.txt  HeterogeneousMaterialGenerator.cpp  HeterogeneousMaterialGenerator.h  README.md  main.cpp
UTL/MSHGEOTOOLS/: CMakeLists.txt  ModifyMeshProperties.cpp  ModifyMeshProperties.h  filterMeshNodes.cpp  mainConvertGLIVerticalSurfaceToPolygon.cpp  mainExtractMeshNodeIDs.cpp  mainExtractMeshNodes.cpp  mainModifyMeshProperties.cpp  testMeshSearchAlgorithms.cpp
UTL/VariableInterpolation/: CMakeLists.txt  CreateVariableValues.cpp  CreateVariableValues.h  VariableValues.cpp  VariableValues.h  main.cpp
scripts/: bench_info.rb  build_configs.bat  build_fem.bat  build_gui.bat  build_gui_osg.bat
tests/: logging.h  testBase.cpp  testBmSkel.cxx  testGeo.cpp  testOgs.cxx  testrunner.cpp
(+47 files in other folders)
